- Metronomes can now use a set of Sound Resoures to play instead of only a single one.
- Custom Metronome SFX with multiple sound files can be registered by putting a 
  folder of sound files into the sfx folder.
- New Settings:
  - Default device commands of PlayerMetronome.
  - Size of PlayerMetronome
  - Hide timeout of PlayerTextBox

Changes:
- If no more sound emitters are found when trying to play a sound an there are
  paused emitters waiting, cannibalize the first waiting emitter to be able to play
  the sound.
- Added a new default SFX to the Metronome: Lub-Dub
- Project preview shows the project name instead of 404 if no Title Card is set.
- Project name is displayed in the Project Card details above the describtion.

Fixed Bugs:
- Fixed a crash occurring when stopping a debug session mid Scene transition.
- Fixed a UI bug causing colors of buttons in button prompts being ignored.
- Fixed buttons always being rendered as html when comming from EOS scripts.
- Fixed SceneManager (pages) function: isEnabled in eval expressions.
- Fixed resolving of Scenes when a Layout contains disabled Scenes after a 
  random Splitter Node.
- Fixed PlayerSceneManager gotoScene not blocking the execution as intended
  until the scene changes.
- Fixed the border in the player.
- Fixed a crash when killing running threads that are stuck in a wait.
- Fixed threads not interrupting correctly when waiting in a sleep.
- Fixed folders in the Resource Views not showing up on top in some cases.
- Fixed a focus issue in the player. Buttons should now not steal the focus
  anymore.

=================
Version 1.4.4.0
=================

Fixed Bugs:
- Fixed Metronome spawning the wrong device commands in some cases.

=================
Version 1.4.3.0
=================

Fixed Bugs:
- Fixed Metronome sending invalid LinearCmd for fast BPMs.
- Implemented bounds checking on the client side for commands.
- Fixed a stack owerflow when waiting for a connector connection that is